improvements: Implementado mais rotas e middlewares em código e no swagger
